# NebulaRTC-Enterprise-Grade-Real-Time-VoIP-Communication-Server

./: CMakeLists.txt  README.md
config/: server.conf
docs/: architecture.md
include/core/: logger.hpp
include/media/: media_session.hpp
include/network/: server.hpp  session.hpp
include/sip/: sip_message.hpp  sip_parser.hpp
src/: logger.cpp  main.cpp  server.cpp  session.cpp
src/core/: logger.cpp
src/media/: media_session.cpp
src/network/: server.cpp  session.cpp
src/sip/: sip_parser.cpp
tests/: sip_parser_tests.cpp
